# torillic

./: .gitignore  CONTRIBUTING.md  README.md  README.md.md  index.html  mkdocs.yaml  torillic.css  typora.html
.github/workflows/: build.yml  docs.yml  gh-pages.yml  publish.yml  pypi.yml
base/: torillic.css
docs/: _template.html  compile.py  index.html  index.md  mkdocs.yaml
docs/examples/: index.html
docs/search/: search_index.json
docs/src/: examples.md  index.md
docs_src/: index.md
mkdocs/: pyproject.toml
mkdocs/example/: mkdocs.yml
mkdocs/example/docs_src/bandits/: Bandit.md  index.md
mkdocs/example/docs_src/dragon/: Cultist.md  Kobold.md  index.md
mkdocs/example/src/: index.md
mkdocs/example/src/bandits/: Bandit Captain.md
mkdocs/example/src/dragon/: Adult Blue Dragon.md  index.md
mkdocs/example/src/geese/: Knife Goose.md  Pond Goose.md
mkdocs/mkdocs_torillic/: main.html
mkdocs/torillic/: main.html  mkdocs_theme.yml
mkdocs/torillic/css/: torillic.css
mkdocs/torillic/css/torillic/: torillic.css
sphinx/: pyproject.toml
sphinx/example/: build.py  requirements.txt
sphinx/example/src/geese/: Asparagoose.md  LGooseBT.md  Moose Goose.md
sphinx/tests/: test_build.py
sphinx/tests/src/: conf.py  index.md  page.md
sphinx/tests/src/category/: index.md  subpage.md
sphinx/torillic/: __init__.py  _template.html  layout.html  theme.conf  torillic.css
sphinx/torillic/static/: torillic.css  torillic.stub
torillic/: torillic.css
torillic/assets/: attrib.json
typora/: README.md  torillic.css  torillic.stub
typora/torillic/: torillic-code.css  torillic-elements.css  torillic-focus.css  (+5 more)
utils/: __init__.py  build.py  changes.py  export.py  publish.py  stub.py  version.py
