[project]
name = "mkdocs-torillic"
version = "2.2.0"
authors = [
    {name = "Todd Parsons", email = "todd.e.parsons@gmail.com"}
]
description = "Implementation of the Torillic theme for mkdocs. Convert your markdown TTRPG notes into beautiful HTML!"

[project.urls]
Homepage = "https://TEParsons.github.io/torillic"
Download = "https://github.com/TEParsons/torillic/torillic/"

[tool.setuptools.package-data]
mkdocs_torillic = ["**/*.html", "**/*.css", "**/*.yml", "**/*.jpg", "**/*.png", "**/*.json", "**/*.ttf"]

[project.entry-points."mkdocs.themes"]
torillic = "mkdocs_torillic"