[project]
name = "sphinx-torillic"
version = "2.2.1"
authors = [
    {name = "Todd Parsons", email = "todd.e.parsons@gmail.com"}
]
description = "Implementation of the Torillic theme for sphinx. Convert your markdown TTRPG notes into beautiful HTML!"

[project.urls]
Homepage = "https://TEParsons.github.io/torillic"
Download = "https://github.com/TEParsons/torillic/torillic/"

[project.entry-points."sphinx.html_themes"]
torillic = "torillic"

[tool.setuptools.package-data]
"*" = ["*.py", "*.png", "*.jpg", "*.css", "*.html", "*.conf"]